{
    "name": "Inputs",
    "maps": [
        {
            "name": "BaseGameplay",
            "id": "af1452e6-7557-44ee-ae86-8b0a744b79ec",
            "actions": [
                {
                    "name": "Roll",
                    "type": "PassThrough",
                    "id": "cbea3001-0e0e-4764-8657-71f4604df5fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "f9087700-dbba-4c1d-a73c-f5974cfc9c6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3177e9c0-3564-46a9-a714-ba0642878708",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "e2c53c13-4acb-4584-9790-305d93284a7f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4a4e70aa-a2e2-4a20-bc3e-3d2b58a172fe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ddbe039e-6c2d-4c87-870f-513f3f85c6fa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7ac85b8a-20ce-4e09-873f-be56a5023eb3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a092af9a-5444-4060-9587-cd4af4d6eb60",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "SelectTarget",
            "id": "fc3088a6-d5f0-4790-9824-e4fca92e7c3f",
            "actions": [
                {
                    "name": "CursorPosition",
                    "type": "PassThrough",
                    "id": "6b4d3851-38ea-4f4d-a50a-db1512dcc417",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "PassThrough",
                    "id": "f6409d36-0ea8-4591-88a8-149ae1696dce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancle",
                    "type": "PassThrough",
                    "id": "6eb687b0-6398-49d6-8856-41514ec4eb5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27066424-8348-4df0-8e68-eb3655a7e93c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2a9fa8e-d2c3-4f80-a219-5a3a4c0db81f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52dcbc74-9987-4dff-9635-570d1505450e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}